<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical"
    android:padding="@dimen/activity_base_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_header_add"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ip_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1" />

    <Button
        android:id="@+id/ip_btn_search"
        style="@style/Button"
        android:text="@string/ip_btn_search" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_base_margin"
        android:text="@string/ip_list_history"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ip_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_base_margin"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/ip_list_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/list_empty"
            android:textColor="@color/black"
            android:textSize="@dimen/text_description_size"
            android:visibility="invisible"
            tools:visibility="visible" />
    </RelativeLayout>

</LinearLayout>